# market-pos

./: .gitignore  package.json
.github/workflows/: build.yml
backend/: market-pos-api.py  requirements.txt
backend/app/: database.py  main.py  seed.py
backend/app/models/: deuda.py  producto.py  sincronizacion.py  tasa_bcv.py  venta.py
backend/app/routers/: deudas.py  licencia.py  productos.py  sync.py  tasa_bcv.py  ventas.py
backend/app/schemas/: deuda.py  producto.py  sync.py  tasa_bcv.py  venta.py
backend/app/services/: bcv_service.py  google_drive.py  license_service.py
backend/tests/: conftest.py  test_deudas.py  test_licencia.py  test_migracion_fechas.py  test_productos.py  test_sync.py  test_tasa_bcv.py  test_ventas.py
docs/: prd-market-desktop-app.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: checkout.spec.ts  configuracion.spec.ts  productos.spec.ts  ventas.spec.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: QrScanner.tsx
frontend/src/pages/: Activacion.tsx  Checkout.tsx  Configuracion.tsx  Deudas.tsx  Productos.tsx  Ventas.tsx
frontend/src/services/: api.ts
frontend/src/types/: models.ts
frontend/tests/: api.test.ts  cart.test.ts
scripts/: build-backend.py  license_tool.py
